--- a/icecream-android/app/src/main/AndroidManifest.xml
+++ b/icecream-android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Icecreamandroid"
         tools:targetApi="31">
         <activity
-            android:name="org.mycotinafulica.icecream.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
